[gd_scene load_steps=19 format=2]

[ext_resource path="res://Enemies/shadow.png" type="Texture" id=1]
[ext_resource path="res://HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://SoftCollision.tscn" type="PackedScene" id=5]
[ext_resource path="res://Shadow.gd" type="Script" id=6]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://MinDist.tscn" type="PackedScene" id=8]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.0945
height = 6.82988

[sub_resource type="CapsuleShape2D" id=5]
radius = 17.6189
height = 10.2627

[sub_resource type="CircleShape2D" id=6]
radius = 20.1573

[sub_resource type="CircleShape2D" id=7]
radius = 104.488

[sub_resource type="CapsuleShape2D" id=8]
radius = 16.0428
height = 11.901

[sub_resource type="CircleShape2D" id=9]
radius = 31.2943

[node name="Shadow" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 6 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 1.06065, 20.1525 )
scale = Vector2( 1.61872, 1 )
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
hframes = 8
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/run = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.61981, 8.05973 )
shape = SubResource( 4 )

[node name="Stats" parent="." instance=ExtResource( 7 )]
max_health = 8

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
position = Vector2( -2.97638, 12.3024 )
collision_layer = 8

[node name="HurtOutch" parent="HurtBox" index="0"]
position = Vector2( 4.90645, -8.2725 )
shape = SubResource( 5 )

[node name="HitBox" parent="." instance=ExtResource( 3 )]
visible = false
collision_mask = 4

[node name="Hit" parent="HitBox" index="0"]
position = Vector2( 0.13707, 4.82356 )
shape = SubResource( 6 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Pzone" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 7 )

[node name="SoftCollision" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Soft" parent="SoftCollision" index="0"]
position = Vector2( -2.66968, 7.67533 )
shape = SubResource( 8 )

[node name="MinDist" parent="." instance=ExtResource( 8 )]
collision_layer = 0
collision_mask = 2

[node name="MinDistance" parent="MinDist" index="0"]
position = Vector2( 2.02209, 4.14455 )
shape = SubResource( 9 )
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]

[editable path="HitBox"]

[editable path="PlayerDetectionZone"]

[editable path="SoftCollision"]

[editable path="MinDist"]
